@@ -283,8 +283,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           1,
                                           0,
                                           IPL_DEPTH_8U,			
-                                          "GRAY",
-                                          "GRAY",
+                                          (char *)"GRAY",
+                                          (char *)"GRAY",
                                           IPL_DATA_ORDER_PIXEL,	 
                                           origin,			
                                           quantum,		
@@ -303,8 +303,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           1,
                                           0,
                                           IPL_DEPTH_16U,     
-                                          "GRAY",
-                                          "GRAY",
+                                          (char *)"GRAY",
+                                          (char *)"GRAY",
                                           IPL_DATA_ORDER_PIXEL,  
                                           origin,     
                                           quantum,    
@@ -321,8 +321,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           3,
                                           0,
                                           IPL_DEPTH_8U,			
-                                          "RGB",
-                                          "RGB",
+                                          (char *)"RGB",
+                                          (char *)"RGB",
                                           IPL_DATA_ORDER_PIXEL,	 
                                           origin,			
                                           quantum,		
@@ -339,8 +339,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           4,
                                           0,
                                           IPL_DEPTH_8U,			
-                                          "RGBA",
-                                          "RGBA",
+                                          (char *)"RGBA",
+                                          (char *)"RGBA",
                                           IPL_DATA_ORDER_PIXEL,	 
                                           origin,			
                                           quantum,		
@@ -357,8 +357,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           4,
                                           0,
                                           IPL_DEPTH_8U,			
-                                          "BGRA",
-                                          "BGRA",
+                                          (char *)"BGRA",
+                                          (char *)"BGRA",
                                           IPL_DATA_ORDER_PIXEL,	 
                                           origin,			
                                           quantum,		
@@ -375,8 +375,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           3,
                                           0,
                                           IPL_DEPTH_32S,
-                                          "RGB",
-                                          "RGB",
+                                          (char *)"RGB",
+                                          (char *)"RGB",
                                           IPL_DATA_ORDER_PIXEL,	 
                                           origin,			
                                           quantum,		
@@ -393,8 +393,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           3,
                                           0,
                                           IPL_DEPTH_8U,			
-                                          "HSV",
-                                          "HSV",
+                                          (char *)"HSV",
+                                          (char *)"HSV",
                                           IPL_DATA_ORDER_PIXEL,	 
                                           origin,			
                                           quantum,		
@@ -411,8 +411,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           3,
                                           0,
                                           IPL_DEPTH_8U,			
-                                          "RGB",
-                                          "BGR",
+                                          (char *)"RGB",
+                                          (char *)"BGR",
                                           IPL_DATA_ORDER_PIXEL,	 
                                           origin,			
                                           quantum,		
@@ -429,8 +429,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           1,
                                           0,
                                           IPL_DEPTH_8S,			
-                                          "GRAY",
-                                          "GRAY",
+                                          (char *)"GRAY",
+                                          (char *)"GRAY",
                                           IPL_DATA_ORDER_PIXEL,	 
                                           origin,			
                                           quantum,		
@@ -451,8 +451,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           1,
                                           0,
                                           IPL_DEPTH_32F,
-                                          "GRAY",
-                                          "GRAY",
+                                          (char *)"GRAY",
+                                          (char *)"GRAY",
                                           IPL_DATA_ORDER_PIXEL,
                                           origin,
                                           quantum,
@@ -469,8 +469,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           3,
                                           0,
                                           IPL_DEPTH_32F,			
-                                          "RGB",
-                                          "RGB",
+                                          (char *)"RGB",
+                                          (char *)"RGB",
                                           IPL_DATA_ORDER_PIXEL,	 
                                           origin,			
                                           quantum,		
@@ -492,8 +492,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           1,
                                           0,
                                           IPL_DEPTH_32S,
-                                          "GRAY",
-                                          "GRAY",
+                                          (char *)"GRAY",
+                                          (char *)"GRAY",
                                           IPL_DATA_ORDER_PIXEL,
                                           origin,
                                           quantum,
@@ -516,8 +516,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           1,
                                           0,
                                           IPL_DEPTH_16U,
-                                          "GRAY",
-                                          "GRAY",
+                                          (char *)"GRAY",
+                                          (char *)"GRAY",
                                           IPL_DATA_ORDER_PIXEL,
                                           origin,
                                           quantum,
@@ -534,8 +534,8 @@ void ImageStorage::_set_ipl_header(int x, int y, int pixel_type, int quantum,
                                           1,
                                           0,
                                           IPL_DEPTH_32S,
-                                          "GRAY",
-                                          "GRAY",
+                                          (char *)"GRAY",
+                                          (char *)"GRAY",
                                           IPL_DATA_ORDER_PIXEL,
                                           origin,
                                           quantum,
